styled side bar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     .side_bar{
         height: 100dvh;
-        background-color: darkgreen;
+        background: 'linear-gradient(to right,darkgreen,lime)';
         display: flex;
         flex-direction: column;
         color: white;
