--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <body>
     <div class="side_bar">
         <label style="font-size: 32px;">WhatsUpp</label>
-        <label style="color: darkgreen;background-color: lightgreen;">Application Link</label>
+        <label style="border: white solid;border-width;0px 1px;">Application Link</label>
         <label>Tech Stack</label>
         <label>App Components</label>
         <label>SQL-NOSQL Combination</label>
@@ -285,17 +285,15 @@
             {
                 if(i!==0)
                 {
-                    for(let j=0;j<side_icons.length;j++)
+                    for(let j=1;j<side_icons.length;j++)
                     {
-                        if(getComputedStyle(side_icons[j]).color==='rgb(0, 100, 0)')
+                        if(getComputedStyle(side_icons[j]).border!=='none')
                         {
-                            side_icons[i].style.background='linear-gradient(to right, darkgreen, lime)'
                             side_icons[i].style.border='none'
                             break
                         }
                     }
-                    side_icons[i].style.backgroundColor='darkgreen'
-                    side_icons[i].style.borderWidth='1px 0px'
+                    side_icons[i].style.borderWidth='0px 1px'
                     side_icons[i].style.border='white solid'
 
 
