--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <body>
     <div class="side_bar">
         <label style="font-size: 32px;">WhatsUpp</label>
-        <label style="border: white solid;border-width;0px 1px;">Application Link</label>
+        <label style="border: white solid;border-width:1px 0px;">Application Link</label>
         <label>Tech Stack</label>
         <label>App Components</label>
         <label>SQL-NOSQL Combination</label>
@@ -289,11 +289,11 @@
                     {
                         if(getComputedStyle(side_icons[j]).border!=='none')
                         {
-                            side_icons[i].style.border='none'
+                            side_icons[j].style.border='none'
                             break
                         }
                     }
-                    side_icons[i].style.borderWidth='0px 1px'
+                    side_icons[i].style.borderWidth='1px 0px'
                     side_icons[i].style.border='white solid'
 
 
