--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@
         
 
     }
+    @media (max-width:700px)
+    {
+        .feedback textarea{
+            width: 250px;
+        }
+    }
+
 </style>
 <body>
     <div class="side_bar">
